--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="back_button">back</string>
     <string name="positions_received">Positions received</string>
     <string name="positions_error">Positions request error</string>
+    <string name="logout">Logout</string>
 
 
 </resources>
