--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,17 @@
     <string name="informacao">Info</string>
     <string name="title">Title</string>
     <string name="more_info">More info +</string>
+    <string name="aviso">Warning</string>
+    <string name="toque_na_tela_para_posicionar_os_objetos_e_mantenha_o_dispositivo_im_vel_por_alguns_segundos_para_estabiliza_o">"Tap the screen to position the objects and hold the device still for a few seconds to stabilize it. "</string>
+    <string name="error_requesting_arcore_installation">Error requesting ARCore installation</string>
+    <string name="arcore_is_not_supported_on_this_device">ARCore is not supported on this device</string>
+    <string name="arcore_availability_unknown">ARCore availability unknown</string>
+    <string name="all_permissions_granted">All permissions granted</string>
+    <string name="permissions_required">Permissions Required</string>
+    <string name="this_app_requires_camera_and_location_permissions_to_function_properly_please_enable_them_in_the_app_settings">This app requires Camera and Location permissions to function properly. Please enable them in the app settings.</string>
+    <string name="go_to_settings">Go to Settings</string>
+    <string name="cancel">Cancel</string>
+    <string name="framework_and_libraries">Frameworks and Libraries</string>
 
 
 </resources>
