--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,20 @@
     <string name="positions_received">Positions received</string>
     <string name="positions_error">Positions request error</string>
     <string name="logout">Logout</string>
+    <string name="list_title">Celestial Objects List</string>
+    <string name="ar_view">AR View</string>
+    <string name="view_in_ar">View in AR</string>
+    <string name="ar_image_icon">ar image icon</string>
+    <string name="task_description">Task Description</string>
+    <string name="more_info">More info +</string>
+    <string name="reset_password">Reset Password</string>
+    <string name="request_reset">Request Token</string>
+    <string name="new_password">New Password</string>
+    <string name="token">Token\n</string>
+    <string name="recover_password">Recover Password</string>
+    <string name="search_hint">Search for a celestial</string>
+    <string name="search">Search</string>
+    <string name="delete">Del\n</string>
 
 
 </resources>
