--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,6 +57,16 @@
     <string name="go_to_settings">Go to Settings</string>
     <string name="cancel">Cancel</string>
     <string name="framework_and_libraries">Frameworks and Libraries</string>
+    <string name="no_translation_found">No translation found</string>
+    <string name="no_content_generated">No content generated</string>
+    <string name="no_images_found">No images found</string>
+    <string name="please_enter_your_email">Please enter your email</string>
+    <string name="please_enter_the_token_and_new_password">Please enter the token and new password</string>
+    <string name="password_reset_email_sent_successfully">Password reset email sent successfully</string>
+    <string name="error_sending_password_reset_email">Error sending password reset email</string>
+    <string name="request_failed">Request failed</string>
+    <string name="password_reset_successfully">Password reset successfully</string>
+    <string name="error_resetting_password">Error resetting password</string>
 
 
 </resources>
